--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -1,4 +1,5 @@
 @import 'elements/navbar';
+@import 'elements/top-level-menu';
 @import 'elements/footer';
 @import 'elements/sidebar';
 @import 'elements/wait-mask';
@@ -8,6 +9,8 @@
 @import 'elements/forms';
 @import 'elements/headers';
 @import 'elements/icons';
+@import 'elements/page-header';
+@import 'elements/tiles';
 
 // TODO temporary
 @import 'elements/navbar-user-selection';
