--- a/assets/stylesheets/base/mixins.scss
+++ b/assets/stylesheets/base/mixins.scss
@@ -24,3 +24,8 @@
 @mixin crisp-edges {
   border-radius: 0;
 }
+
+@mixin column-flex {
+  @include display(flex);
+  @include flex-flow(row wrap);
+}
