--- a/assets/stylesheets/base/variables.scss
+++ b/assets/stylesheets/base/variables.scss
@@ -37,6 +37,7 @@ $navbar-height: 90px;
 $navbar-padding: 10px;
 $navbar-padding-sm: 2em;
 $navbar-padding-lg: 5em;
+$navbar-menu-margin: 2em;
 $navbar-bg: $gray;
 $navbar-color: $porcelain;
 $navbar-brand-color: $brand-primary-light;
