--- a/app/views/change_requests/index/_header.slim
+++ b/app/views/change_requests/index/_header.slim
@@ -1,10 +1,11 @@
 .row
-  h1.col-sm-6 Change Requests
+  h1.col-sm-6 Workspace
   .input-group.col-sm-6
     input.form-control type="text" placeholder="Search..." autocomplete="off"
     span.input-group-btn
       button.btn.btn-primary type="button"
         i.fa.fa-search
+
 hr
 
 .actions
