Add dynamic contributions

--- a/app/views/change_requests/contributions.slim
+++ b/app/views/change_requests/contributions.slim
@@ -1,5 +1,5 @@
 .document
-  iframe src="/documents/master"
+  iframe src="/documents/master_contributions"
 
 section.contributions
   = render partial: "/change_requests/contributions/contributions",
