--- a/app/views/documents/master_contributions.html.erb
+++ b/app/views/documents/master_contributions.html.erb
@@ -4,7 +4,7 @@
     <%= render "/documents/master_head" %>
   </head>
   <body>
-    <%= render "/documents/master_body" %>
+    <%= render "/documents/master_contributions_body" %>
     <script src="<%= gulp_asset_path("javascripts/respec-etsi-debug.js") %>" async class='remove'></script>
     <script class='remove'>
       var respecConfig = {
@@ -13,7 +13,7 @@
         specType:   "TS",
         specIndex:  "102687",
         subtitle:   "Access layer part",
-        specVersion:"1.1.1",
+        specVersion:"1.1.2",
         editors: [
 	  {
 	    name:       "ETSI Secretariat",
