--- a/app/views/change_requests/contributions/_legend.slim
+++ b/app/views/change_requests/contributions/_legend.slim
@@ -2,6 +2,6 @@
   .legend-accepted.col-sm-6
     i.fa.fa-check-circle
     span Contribution is accepted
-  .legend-noted.col-sm-6
+  .legend-not-accepted.col-sm-6
     i.fa.fa-times-circle
-    span Contribution is noted
+    span Contribution is not accepted
