--- a/app/views/change_requests/index/_tile_body.slim
+++ b/app/views/change_requests/index/_tile_body.slim
@@ -8,6 +8,7 @@
   dl.last-edited-by
     dt Last commit
     dd= change_request.last_edited_by&.full_name
+
 - if change_request.last_edited_by
   .last-commit
     h3 Commit Details
@@ -18,6 +19,7 @@
       dl.comment
         dt Comment
         dd= change_request.comment
+
 - if change_request.contributed_at
   .contributed_at
     h3 Contribution Details
@@ -25,3 +27,12 @@
       dl.date
         dt Contribution date
         dd= change_request.contributed_at
+
+.issues
+  h3 Associated Issues
+  - if change_request.issues.empty?
+    = render partial: "/change_requests/index/empty_issues"
+  - else
+    ul
+      = render partial: "/change_requests/index/issue",
+        collection: change_request.issues
