Implement contribute dialog

--- a/app/views/change_requests/index.slim
+++ b/app/views/change_requests/index.slim
@@ -7,3 +7,8 @@ section.workspace
 
   section.change-requests
     = render "/change_requests/index/tiles"
+
+- content_for :modals
+  section.modals
+    = render "/change_requests/index/modals"
+
