--- a/app/views/change_requests/index/_more_actions.slim
+++ b/app/views/change_requests/index/_more_actions.slim
@@ -29,12 +29,12 @@
   ul
     - if change_request.contributable?
       li
-        a.contribute href="#"
+        a.contribute.js-contribute href="#"
           span Contribute
           i.fa.fa-send
     - if change_request.recontributable?
       li
-        a.recontribute href="#"
+        a.recontribute.js-contribute href="#"
           span Recontribute
           i.fa.fa-send
     - if change_request.applicable?
