--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -20,7 +20,10 @@ html
     footer.footer
       = render "layouts/shared/footer"
 
+    .glass-pane
     = render "layouts/shared/wait_mask"
+
+    = yield :modals
 
     = javascript_include_tag 'application'
     = yield :scripts
