--- a/assets/stylesheets/application/elements.scss
+++ b/assets/stylesheets/application/elements.scss
@@ -2,6 +2,7 @@
 @import 'elements/top-level-menu';
 @import 'elements/footer';
 @import 'elements/sidebar';
+@import 'elements/glass-pane';
 @import 'elements/wait-mask';
 @import 'elements/buttons';
 @import 'elements/select-control';
@@ -11,6 +12,6 @@
 @import 'elements/icons';
 @import 'elements/page-header';
 @import 'elements/tiles';
-
-// TODO temporary
+@import 'elements/modals';
+@import 'elements/lists';
 @import 'elements/navbar-user-selection';
