--- a/assets/stylesheets/base/variables.scss
+++ b/assets/stylesheets/base/variables.scss
@@ -57,3 +57,7 @@ $content-padding-top: 1em;
 $content-padding-bottom: 2em;
 $content-gutter-width: 35px;
 
+$modal-header-bg: $madison;
+$modal-header-color: white;
+$modal-body-bg: $porcelain;
+$modal-footer-bg: $lynch;
